# odoo19-owl-course

./: .gitignore  .pylintrc  .ruff.toml  README.md  install.sh  odoo.conf  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
addons/owl_course/: __manifest__.py
addons/owl_course/static/src/components/company_dashboard/: company_dashboard.js  company_dashboard.scss  company_dashboard.xml
addons/owl_course/static/src/components/counter/: counter.js  counter.scss  counter.xml
addons/owl_course/static/src/components/hola_mundo/: hola_mundo.js  hola_mundo.scss  hola_mundo.xml
addons/owl_course/static/src/components/posts/: posts.js  posts.scss  posts.xml
addons/owl_course/static/src/components/reloj/: reloj .xml  reloj.js  reloj.scss
addons/owl_course/static/src/components/todo/: todo.js  todo.scss  todo.xml
addons/owl_course/static/src/components/user/: user_card.js  user_card.scss  user_card.xml  user_list.js  user_list.scss  user_list.xml
addons/owl_course/static/src/services/: fakeApi.js
addons/owl_course/views/: company_dashboard_actions.xml  counter_actions.xml  hello_world_actions.xml  menus.xml  posts_action.xml  reloj_actions.xml  todo_actions.xml  user_actions.xml
