[project]
name = "course"
version = "0.1.0"
description = "Odoo Owl Course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["debugpy", "pydevd-odoo", "pylint_odoo", "ruff"]

[tool.ruff.lint]
extend-select = [
    "B",
    "C90",
    "E501",  # line too long (default 88)
    "I",  # isort
    "UP",  # pyupgrade
]
exclude = ["setup/*"]

[format]
exclude = ["setup/*"]

[per-file-ignores]
"__init__.py" = ["F401", "I001"]  # ignore unused and unsorted imports in __init__.py
"__manifest__.py" = ["B018"]  # useless expression

[isort]
section-order = ["future", "standard-library", "third-party", "odoo", "odoo-addons", "first-party", "local-folder"]

[isort.sections]
"odoo" = ["odoo"]
"odoo-addons" = ["odoo.addons"]

[mccabe]
max-complexity = 16
